--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body class="body__container body-bg" >
   <header class="header header--stiky">
-    <nav class="header__nav  navbar navbar-expand-lg ">
+    <nav class="  navbar navbar-expand-lg header__nav ">
         <div class="container-fluid nav--bg"  >
                   
           
@@ -31,7 +31,7 @@
                   Clases
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="/Pages/clases.html#kungfu"> Kung Fu</a></li>
+                  <li><a class="dropdown-item" href="/Pages/clases.html#kungfu">Kung Fu</a></li>
                   <li><a class="dropdown-item" href="/Pages/clases.html#taichi">TaiChi</a></li>
                   <li><a  class="dropdown-item" href="/Pages/clases.html#chikung">Chikung</a></li>                      
                 </ul>
