--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <!-- MI CSS -->
-    <link rel="stylesheet" href="/CSS/Styles.css">
+    <link rel="stylesheet" href="CSS/Styles.css">
 </head>
 <body class="body__container body-bg" >
   <header class="header header--stiky">
@@ -32,9 +32,9 @@
                   Clases
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="/Pages/clases.html#kungfu">Kung Fu</a></li>
-                  <li><a class="dropdown-item" href="/Pages/clases.html#taichi">TaiChi</a></li>
-                  <li><a  class="dropdown-item" href="/Pages/clases.html#chikung">Chikung</a></li>                      
+                  <li><a class="dropdown-item" href="Pages/clases.html">Kung Fu</a></li>
+                  <li><a class="dropdown-item" href="Pages/clases.html">TaiChi</a></li>
+                  <li><a  class="dropdown-item" href="Pages/clases.html">Chikung</a></li>                      
                 </ul>
               </li>
               <li class="nav-item dropdown">
@@ -42,12 +42,12 @@
                   Servicios
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item active" href="/Pages/servicios.html">Masaje Emp</a></li>
-                  <li><a class="dropdown-item active" href="/Pages/servicios.html">Masaje Emp</a></li>                                         
+                  <li><a class="dropdown-item active" href="Pages/servicios.html">Masaje Emp</a></li>
+                  <li><a class="dropdown-item active" href="Pages/servicios.html">Masaje Emp</a></li>                                         
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/Pages/nosotros.html">Conocenos</a>
+                <a class="nav-link" aria-current="page" href="Pages/nosotros.html">Conocenos</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#"></a>
@@ -57,12 +57,12 @@
                   Informacion
                 </a>
                 <ul class="dropdown-menu">
-                  <li ><a class="dropdown-item" href="/Pages/contacto.html">Contactanos</a></li>
-                  <li><a class="dropdown-item " href="/Pages//ubicacion.html">Como Llego?</a></li>                                         
+                  <li ><a class="dropdown-item" href="Pages/contacto.html">Contactanos</a></li>
+                  <li><a class="dropdown-item " href="Pages/ubicacion.html">Como Llego?</a></li>                                         
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link " href="/Pages/noticias.html">Noticias</a>
+                <a class="nav-link " href="Pages/noticias.html">Noticias</a>
               </li>
             </ul>
             <form class="d-flex " role="search">
@@ -108,10 +108,10 @@
   <section class="section mt-5 mapa section--bg   card-maps ">
 
     <div class="  card mb-3" >
-      <div class="row g-0">
+      <div class="row g-0 card-map-body" >
         
         <div class="col-6">
-          <div class="card-body">
+          <div class="card-body ">
             <h5 class="card-title card--text ">Card title</h5>
             <p class="card--text ">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             <p class="card--text litle ">Recordá que sólo atendemos con reserva previa de turno</p>
