--- a/Pages/nosotros.html
+++ b/Pages/nosotros.html
@@ -30,7 +30,7 @@
                 Clases
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="/Pages/clases.html">Kung Fu</a></li>
+                <li><a class="dropdown-item" href="clases.html">Kung Fu</a></li>
                 <li><a class="dropdown-item" href="clases.html">TaiChi</a></li>
                 <li><a class="dropdown-item" href="clases.html">Chikung</a></li>                      
               </ul>
@@ -45,7 +45,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/Pages/nosotros.html">Conocenos</a>
+              <a class="nav-link" aria-current="page" href="nosotros.html">Conocenos</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#"></a>
