--- a/Pages/noticias.html
+++ b/Pages/noticias.html
@@ -45,7 +45,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/Pages/nosotros.html">Conocenos</a>
+              <a class="nav-link" aria-current="page" href="nosotros.html">Conocenos</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#"></a>
