--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
       <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/Img/Imagenes/TaiChi.jpg" class="img d-flex w-100" alt="taichi">
+            <img src="Img/Imagenes/TaiChi.jpg" class="img d-flex w-100" alt="taichi">
           </div>
           <div class="carousel-item">
-            <img src="/Img/Imagenes/Masajes.jpg" class="img d-flex w-100" alt="tuina">
+            <img src="Img/Imagenes/Masajes.jpg" class="img d-flex w-100" alt="tuina">
           </div>
           <div class="carousel-item">
-            <img src="/Img/Imagenes/Acumpuntura.jpg" class="img d-flex w-100" alt="Acumpuntura">
+            <img src="Img/Imagenes/Acumpuntura.jpg" class="img d-flex w-100" alt="Acumpuntura">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="prev">
